# DjangoTemplate

./: .env.example  .gitignore  LICENSE  README.md  manage.py  pyproject.toml
src/: __init__.py
src/application/: __init__.py
src/application/dto/: __init__.py  auth_dto.py  user_dto.py
src/application/events/: __init__.py  user_events.py
src/application/ports/: __init__.py  messaging.py  security.py  storage.py
src/application/services/: __init__.py  auth_service.py  user_management.py
src/domain/: __init__.py  exceptions.py
src/domain/entities/: user.py  value_objects.py
src/domain/repositories/: __init__.py  unit_of_work.py  user_repository.py
src/domain/services/: user_domain_service.py
src/infrastructure/: __init__.py
src/infrastructure/django/: __init__.py  admin.py  apps.py  asgi.py  wsgi.py
src/infrastructure/django/migrations/: 0001_initial.py
src/infrastructure/django/models/: __init__.py  mixins.py  user_model.py
src/infrastructure/django/settings/: base.py  local.py  production.py
src/infrastructure/messaging/: __init__.py  celery_adapter.py  celery_app.py
src/infrastructure/messaging/tasks/: events.py  user_tasks.py
src/infrastructure/persistence/: __init__.py  django_uow.py  user_repository_impl.py
src/infrastructure/persistence/mappers/: __init__.py  user_mapper.py
src/infrastructure/security/: cookie_auth.py
src/infrastructure/web/: __init__.py
src/infrastructure/web/middleware/: __init__.py  auth_middleware.py
src/interface/: __init__.py
src/interface/api/: __init__.py  dependencies.py  urls.py
src/interface/api/views/: auth_views.py  health_views.py
src/interface/cli/: __init__.py
tests/: conftest.py
tests/e2e/api/: __init__.py  test_auth_api.py
tests/integration/infrastructure/: __init__.py  test_user_repository.py
tests/unit/domain/: test_user.py  test_value_objects.py
