[project]
name = "django-hexagonal"
version = "0.1.0"
description = "Django template with hexagonal architecture"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "django>=5.0",
    "psycopg[binary]>=3.1",
    "celery[redis]>=5.3",
    "pyjwt>=2.8",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "gunicorn>=21.2",
    "whitenoise>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-django>=4.7",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
    "django-stubs>=4.2",
    "httpx>=0.25",  # For testing async views
    "factory-boy>=3.3",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
dev = "python manage.py runserver"
migrate = "python manage.py migrate"
makemigrations = "python manage.py makemigrations"
shell = "python manage.py shell"
test = "pytest tests/ -v"
test-cov = "pytest tests/ -v --cov=src --cov-report=html"
lint = "ruff check src/"
lint-fix = "ruff check src/ --fix"
typecheck = "mypy src/"
celery = "celery -A src.infrastructure.messaging.celery_app worker -l INFO"

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
plugins = ["mypy_django_plugin.main", "pydantic.mypy"]
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "src.infrastructure.django.settings.local"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "src.infrastructure.django.settings.local"
python_files = ["test_*.py"]
addopts = "-ra -q"
testpaths = ["tests"]
